# xbox-iso-vfs

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
src/: main.cc  vfs.cc  vfs.h  vfs_operations.cc  vfs_operations.h  xdvdfs.cc  xdvdfs.h
